src/todo.css
.card {
  display: inline-block;
  margin-top: 25px;
  margin-right: 20px;
  width: calc(33% - 25px);
  text-align: center;
  height: 80vh;
}
.card:first-child {
  margin-left: 20px;
}
.card ol {
  list-style-position: inside;
  border: 2px dotted red;
}

